<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_drawer_header"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"
        android:contentDescription="@string/user_image"/>

    <TextView
        android:id="@+id/profile_username"
        android:text="@string/username"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/email" />

    <LinearLayout
        android:id="@+id/innerLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"/>


</LinearLayout>